--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@clerk/nextjs": "^4.25.3",
+        "@google/generative-ai": "^0.24.0",
         "@hello-pangea/dnd": "^16.3.0",
         "@hookform/resolvers": "^3.3.1",
         "@mux/mux-node": "^7.3.2",
@@ -33,6 +34,7 @@
         "cmdk": "^0.2.0",
         "lucide-react": "^0.284.0",
         "next": "13.5.4",
+        "openai": "^4.91.1",
         "query-string": "^8.1.0",
         "react": "^18",
         "react-confetti": "^6.1.0",
