--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tabs": "^1.1.4",
+        "@radix-ui/react-tooltip": "^1.2.0",
         "@tanstack/react-table": "^8.10.7",
         "@uploadthing/react": "^5.7.0",
         "axios": "^1.6.0",
